--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /Node/AsyPic/node_modules
 /Node/AsyPic/upload
+/Node/w12306/node_modules
+/Node/w12306/cert
+/Node/AsyCnBlog/node_modules
+/Node/Demos/node_modules
+/Node/Demos/logs
