--- a/Node/AsyCnBlog/package.json
+++ b/Node/AsyCnBlog/package.json
@@ -12,6 +12,7 @@
     "async": "^2.1.4",
     "cheerio": "^0.22.0",
     "eventproxy": "^0.3.5",
+    "log4js": "^1.1.0",
     "superagent": "^3.3.2"
   }
 }
