--- a/Node/w12306/package.json
+++ b/Node/w12306/package.json
@@ -12,8 +12,12 @@
   "author": "wzh",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.1.4",
+    "cheerio": "^0.22.0",
+    "eventproxy": "^0.3.5",
     "log4js": "^1.1.0",
     "node-schedule": "*",
-    "nodemailer": "^2.7.0"
+    "nodemailer": "^2.7.0",
+    "superagent": "^3.3.2"
   }
 }
