--- a/Node/AsyPic/package.json
+++ b/Node/AsyPic/package.json
@@ -9,6 +9,12 @@
   "author": "wzh",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "^0.22.0"
+    "async": "^2.1.4",
+    "cheerio": "^0.22.0",
+    "eventproxy": "^0.3.5",
+    "log4js": "^1.1.0",
+    "moment": "^2.17.1",
+    "node-schedule": "^1.2.0",
+    "superagent": "^3.3.2"
   }
 }
