--- a/Node/AsyPic/package.json
+++ b/Node/AsyPic/package.json
@@ -12,6 +12,7 @@
     "async": "^2.1.4",
     "cheerio": "^0.22.0",
     "eventproxy": "^0.3.5",
+    "http": "0.0.0",
     "log4js": "^1.1.0",
     "moment": "^2.17.1",
     "node-schedule": "^1.2.0",
