--- a/Node/AsyCnBlog/package.json
+++ b/Node/AsyCnBlog/package.json
@@ -14,6 +14,7 @@
     "eventproxy": "^0.3.5",
     "log4js": "^1.1.0",
     "moment": "^2.17.1",
+    "node-schedule": "^1.2.0",
     "superagent": "^3.3.2"
   }
 }
