--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,6 +1,6 @@
 {
     "version": "0.1.0",
-    "command": "C:/Python/Python35-32/python.exe",
+    "command": "C:/Python27/python.exe",
     "isShellCommand": true,
     "args": ["${file}"],
     "showOutput": "always"
